--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "predeploy": "vue-cli-service build",
+    "deploy": "gh-pages -d dist",
+    "clean": "gh-pages-clean"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
@@ -26,6 +29,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0",
+    "gh-pages": "^4.0.0",
     "sass": "1.32.12",
     "sass-loader": "^10",
     "vue-cli-plugin-quasar": "~5.0.1"
