--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -5,12 +5,12 @@ name: Node.js Package
 
 on:
   push:
-    branches: [main]
+    branches: [master]
 
 jobs:
   # job의 이름 설정
   deploy:
-  	# 해당 job을 실행하는 운영 체제
+    # 해당 job을 실행하는 운영 체제
     runs-on: ubuntu-latest
 	
     # 수행할 동작 정의
