--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -5,7 +5,7 @@ name: Node.js Package
 
 on:
   push:
-    branches: [master]
+    branches: [main]
 
 jobs:
   # job의 이름 설정
@@ -19,11 +19,11 @@ jobs:
     steps:
       # 1. 저장소 체크아웃
       - name: Checkout source code
-        uses: actions/checkout@master
+        uses: actions/checkout@main
 
       # 2. node.js 환경설정
       - name: Set up Node.js
-        uses: actions/setup-node@master
+        uses: actions/setup-node@main
         with:
           node-version: 14.x
 
